assets/css/sections/hero-section.css
.hero {
  margin-top: clamp(2.5rem, 0.5rem + 6.25vw, 4.5rem);
}

.hero-badge {
  font-size: var(--fs-typ);
  line-height: var(--lh-normal);
  color: var(--tertiary-color);
  border: 1px solid var(--tertiary-color);
  padding: 10px;
}

.hero-title {
  margin: 25px 0;
}

.hero-desc {
  margin-bottom: 24px;
}

.hero-img {
  width: 70%;
}

.btn-hero {
  padding: 12px 22px;
}

@media (width >= 768px) {
  .hero-wrapper {
    gap: 49px;
  }

  .hero-desc {
    width: 354px;
    margin-bottom: 27px;
  }

  .hero-img {
    width: 100%;
  }

  .btn-hero {
    padding: 12px 32px;
  }
}

@media (width >= 992px) {
  .hero-wrapper {
    gap: 40px;
  }

  .hero-pagination-dot {
    height: 70px;
    border: 1px solid var(--primary-color);
    opacity: 0.3;
  }

  .hero-pagination-dot.active {
    opacity: 1;
  }

  .hero-title {
    margin-top: 32px;
    margin-bottom: 32px;
  }

  .hero-desc {
    width: 476px;
    margin-bottom: 39px;
  }

  .hero-image-block {
    width: 623px;
    height: 535px;
  }

  .hero-promo {
    top: 8%;
    left: 0;
    font-size: 18px;
    color: var(--text-color);
    letter-spacing: 10%;
  }

  .hero-img {
    margin-right: 64px;
    margin-left: auto;
    width: 55%;
    height: 90%;
    padding-bottom: 10px;
  }

  .hero-note {
    bottom: 9%;
    margin-right: 0;
    color: var(--heading-color-secondary);
  }
}

